Aggiunta mappa all'interno del fragment

--- a/MyFragmentApp/app/src/main/AndroidManifest.xml
+++ b/MyFragmentApp/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyFragmentApp"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyC0ID1-UstsT3NO6WE7pmUlrN0_LQ9HlPY" />
         <activity
             android:name=".LoginActivity"
             android:exported="false">
@@ -27,7 +30,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
