--- a/MyFragmentApp/app/build.gradle
+++ b/MyFragmentApp/app/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     def nav_version = "2.5.3"
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
+
+    // Aggiunte dipendenze per utilizzo Google Maps API
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
 }
