aggiunte di prova
blue dot e prova search bar

--- a/MyFragmentApp/app/build.gradle
+++ b/MyFragmentApp/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
 
     // Aggiunte dipendenze per utilizzo Google Maps API
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
 }
