--- a/MyFragmentApp/app/src/main/AndroidManifest.xml
+++ b/MyFragmentApp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
@@ -27,7 +28,7 @@
 
         <activity
             android:name=".InsertPlaceActivity"
-            android:exported="false"
+            android:exported="true"
             android:screenOrientation="portrait">
         </activity>
         <activity
