Login con Firebase Auth & Realtime Database
Da rivedere signup quando l'utente tenta di registrarsi nuovamente con lo stesso indirizzo

--- a/Login con Firebase/PinSpotDemo/app/build.gradle
+++ b/Login con Firebase/PinSpotDemo/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.blackbox.pinspotdemo'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.blackbox.pinspotdemo"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -36,16 +36,34 @@ android {
 }
 
 dependencies {
+    def nav_version = "2.5.3"
+    def room_version = "2.4.3"
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation platform('com.google.firebase:firebase-bom:31.1.1')
-    implementation 'com.google.firebase:firebase-auth:21.1.0'
-    implementation 'com.google.firebase:firebase-storage:20.1.0'
     implementation 'com.firebaseui:firebase-ui-database:7.1.1'
-    implementation 'com.google.firebase:firebase-database:20.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+    // Dipendenze per autenticazione
+    implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.android.gms:play-services-auth:20.4.0'
+
+    // Dipendenze utili per Email Validator
+    implementation group: 'commons-validator', name: 'commons-validator', version: '1.7'
+
+    // Dipendenze per Gson (Json Parser)
+    implementation 'com.google.code.gson:gson:2.10'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
+
+    // Dipendenze utili a DataEncryptionUtil
+    implementation "androidx.security:security-crypto:1.1.0-alpha04"
+
+    // Dipendenze per Navigation Graph
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
 }
