--- a/Login con Firebase/PinSpotDemo/app/src/main/AndroidManifest.xml
+++ b/Login con Firebase/PinSpotDemo/app/src/main/AndroidManifest.xml
@@ -28,18 +28,10 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".LoginActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".SplashActivity"
+            android:name=".ui.welcome.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <meta-data
@@ -47,7 +39,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.main.MainActivity"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
