--- a/Login con Firebase/PinSpotDemo/settings.gradle
+++ b/Login con Firebase/PinSpotDemo/settings.gradle
@@ -8,7 +8,8 @@ pluginManagement {
     }
 }
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.PREFER_PROJECT)   //cambiato a PREFER_PROJECT altrimenti Gradle non esegue la build
+    // Cambiato a PREFER_PROJECT da FAIL_ON_PROJECT_REPOS altrimenti Gradle non esegue la build
+    repositoriesMode.set(RepositoriesMode.PREFER_PROJECT)
     repositories {
         google()
         mavenCentral()
