Salva high quality

--- a/MyFragmentApp/app/src/main/AndroidManifest.xml
+++ b/MyFragmentApp/app/src/main/AndroidManifest.xml
@@ -45,6 +45,15 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+        <provider
+            android:authorities="com.example.myfragmentapp"
+            android:name="androidx.core.content.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
+                        android:resource="@xml/file_paths" />
+        </provider>
     </application>
 
 </manifest>
