--- a/placeSearchProva/app/build.gradle
+++ b/placeSearchProva/app/build.gradle
@@ -3,12 +3,12 @@ plugins {
 }
 
 android {
-    namespace 'com.example.myfragmentapp'
+    namespace 'com.example.placesearchprova'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.myfragmentapp"
-        minSdk 21
+        applicationId "com.example.placesearchprova"
+        minSdk 22
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -35,16 +35,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.libraries.places:places:3.0.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
-
-    // Aggiunte dipendenze per utilizzo NavigationGraph
-    def nav_version = "2.5.3"
-    implementation "androidx.navigation:navigation-fragment:$nav_version"
-    implementation "androidx.navigation:navigation-ui:$nav_version"
-
-    // Aggiunte dipendenze per utilizzo Google Maps API
-    implementation 'com.google.android.gms:play-services-maps:18.1.0'
-    implementation 'com.google.android.gms:play-services-location:21.0.1'
-    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
