--- a/MyLoginApp-master/app/src/main/AndroidManifest.xml
+++ b/MyLoginApp-master/app/src/main/AndroidManifest.xml
@@ -2,14 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myloginapp">
 
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".DynamicColor"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyLoginApp">
-        <activity android:name=".InsertPinActivity"/>
+        <activity android:name=".LoginActivity"/>
 
         <activity android:name=".SplashScreen"
             android:exported="true"
