--- a/PinSpot/build.gradle
+++ b/PinSpot/build.gradle
@@ -11,6 +11,9 @@ buildscript {
         // Add the dependency for the Google services Gradle plugin
         classpath 'com.android.tools.build:gradle:4.2.1'
         classpath 'com.google.gms:google-services:4.3.14'
+        // Add the dependency for the SafeArgs plugin
+        def nav_version = "2.5.3"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
