--- a/PinSpot/app/build.gradle
+++ b/PinSpot/app/build.gradle
@@ -75,6 +75,8 @@ dependencies {
 
     // Google Maps API dependencies
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+
 
     // Firestore Geoqueries dependencies
     implementation 'com.firebase:geofire-android-common:3.1.0'
