Recupero foto del pin

--- a/PinSpot/app/build.gradle
+++ b/PinSpot/app/build.gradle
@@ -85,6 +85,7 @@ dependencies {
 
     // Firebase Storage dependencies
     implementation 'com.google.firebase:firebase-storage:20.1.0'
+    implementation 'com.firebaseui:firebase-ui-storage:8.0.2'
 
     // Firebase Firestore
     implementation 'com.google.firebase:firebase-firestore:24.4.2'
@@ -95,4 +96,8 @@ dependencies {
     // Retrofit dependencies
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // Glide dependencies
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
 }
