Rimozione delle API key disattivate
Per testare la soluzione è necessario generare le proprie API keys. Si consiglia di valutare l'inserimento delle stesse nel file local.properties

--- a/PinSpot/app/src/main/AndroidManifest.xml
+++ b/PinSpot/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyC0ID1-UstsT3NO6WE7pmUlrN0_LQ9HlPY" />
+            android:value="Insert Google Maps API key" />
         <activity
             android:name=".ui.welcome.LoginActivity"
             android:exported="true" >
